samples/_failures_safe/1761435646_0784c5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed168c90.c: In function ‘main’:
./samples/SAFE/__tmp_ed168c90.c:141:20: error: missing terminating " character
  141 |             printf("Invalid filter. Showing all
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ed168c90.c:141:13: error: expected expression at end of input
  141 |             printf("Invalid filter. Showing all
      |             ^~~~~~
./samples/SAFE/__tmp_ed168c90.c:141:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ed168c90.c:141:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ed168c90.c:141:13: error: expected declaration or statement at end of input
